test/integration/cli-args/model-name/stanc.expected
  $ /home/brian/Dev/ml/stanc3/stanc.exe --name=foo  8start_with_number.stan

  $ /home/brian/Dev/ml/stanc3/stanc.exe --name=foo  bad.stan
Semantic error in 'bad.stan', line 3, column 6 to column 9:
   -------------------------------------------------
     1:  data {
     2:    // declare matching model name should fail
     3:    int foo;  
               ^
     4:  }
     5:  parameters {
   -------------------------------------------------

Identifier 'foo' clashes with model name.
  $ /home/brian/Dev/ml/stanc3/stanc.exe --name=foo  good.stan

